tests/fixtures/valid/dbus_app.desktop
[Desktop Entry]
Type=Application
Name=DBus Activatable App
DBusActivatable=true
Icon=dbus-app
Comment=An application launched via DBus
