tests/fixtures/invalid/missing_type.desktop
[Desktop Entry]
Name=Missing Type
Exec=missing-type-app
